--- a/app/src/main/res/layout/item_select_program.xml
+++ b/app/src/main/res/layout/item_select_program.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
-        <include layout="@layout/item_layout_header" />
+        <include
+            layout="@layout/item_layout_header" />
 
 
     </LinearLayout>
